Let tests change the environment.